# DG-Learner

./: .gitignore  README.md  howto.md  prepare-release.sh  start-test.sh
.github/workflows/: android-apk.yml  deploy-pages.yml  release-desktop.yml
Docs/: DG Learner Konzept.odt  README.md  backend.md  frontend.md  mobile.md  publish.md
backend/app/: main.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/public/: manifest.webmanifest  sw.js
frontend/src/: App.jsx  main.jsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/components/: BranchSelector.jsx  CategorySelector.jsx  CompletionDialog.jsx  FeedbackMessage.jsx  LearningModeSwitch.jsx  ModeSelector.jsx  OrganigramBoard.jsx  ProgressPanel.jsx  PwaInstallPanel.jsx  RankImage.jsx  ReviewPanel.jsx  ShortcutButton.jsx  StatsPage.jsx
frontend/src/data/: ranks.js  ranks.json
frontend/src/hooks/: usePersistentState.js  usePwaInstall.js
frontend/src/styles/: index.css
frontend/src/utils/: logic.js
