[package]
name = "dg-learner"
version = "0.1.6"
description = "Desktop-Lernanwendung für Bundeswehr-Dienstgrade"
authors = ["Konrad"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

