[package]
name = "dg-learner"
version = "1.0.2"
description = "Desktop-Lernanwendung für Bundeswehr-Dienstgrade"
authors = ["Konrad"]
edition = "2021"

[lib]
name = "dg_learner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
